rjesavanje raznih sonar qube issuea